# qwen3.5-4b

./: .clang-format  .clangd  .dockerignore  .gitignore  Dockerfile.build  Makefile  README.md  benchmark  build-script.sh  config.toml  profile-linear.sh  profile-model.sh  profile.sh  pyproject.toml  run.sh  setup.sh
fixtures/: prompts.json
scripts/: check_correctness.sh  download_model.py  normalize_compile_commands.py  pack_for_cloud.sh  pack_for_runpod.sh  profile_attention.py  profile_gated_delta.py  profile_model_decode.py  setup_cloud.sh  setup_runpod.sh
src/: qwen35_cli.py  workflows.py
src/common/: __init__.py  artifact.py  attention.py  benchmark.py  compare.py  config.py  gated_delta.py  qwen35.py  system.py  trace.py  types.py
src/cuda_impl/: __init__.py  attention.py  correctness.py  linear_attention.py  model.py
src/cuda_impl/csrc/: attention.cu  attention_v2.cu  attention_v2.cuh  attention_v3.cu  attention_v3.cuh  attention_v4.cu  attention_v4.cuh  attention_v5.cu  attention_v5.cuh  attention_v6.cu  attention_v6.cuh  bindings.cpp  (+2 more)
src/hf_impl/: __init__.py  attention.py  benchmark.py  model.py
src/torch_impl/: __init__.py  attention.py  model.py
tests/attention/: test_attention.py  test_cuda_attention.py  test_cuda_sandbox.py
tests/integration/: test_model_equivalence.py
tests/linear_attention/: test_cuda_gated_delta.py
tests/unit/: test_artifact_compare.py  test_config.py  test_cuda_correctness.py  test_hf_config.py  test_trace.py
tools/cloud/: bundle.sh  config.example.json  connect.sh  fetch-artifacts.sh  fetch-profile.sh
